<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TableRow
        android:id="@+id/trVocabID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156">

        <TextView
            android:id="@+id/tvVocabLabelID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/vocabulary_column"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvVocabID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trInputID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trVocabID"
        app:layout_constraintVertical_bias="0.121">

        <EditText
            android:id="@+id/etDefinitionID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/hint"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/trInputTvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trVocabID"
        app:layout_constraintVertical_bias="0.117">

        <TextView
            android:id="@+id/tvInputLabelID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/you_column"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvInputID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="Your Input"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:id="@+id/trAnswerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trInputTvID"
        app:layout_constraintVertical_bias="0.166">

        <TextView
            android:id="@+id/tvAnswerLabelID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/answer_column"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvAnswerID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="Your Answer" />
    </TableRow>

    <TableRow
        android:id="@+id/trCheckID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trInputID"
        app:layout_constraintVertical_bias="0.309">

        <Button
            android:id="@+id/btnCheckID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outline"
            android:fontFamily="casual"
            android:text="@string/check" />
    </TableRow>

    <TableRow
        android:id="@+id/trNavigateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trAnswerID"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnBackID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/outline"
            android:fontFamily="casual"
            android:text="@string/back"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnContinueID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/outline"
            android:fontFamily="casual"
            android:text="@string/next"
            android:visibility="visible" />

    </TableRow>

</android.support.constraint.ConstraintLayout>
